Added channel titles on messages to reflect current channel
